# desktop

./: Cargo.toml  README.md  build.rs
src/: cli.rs  config.rs  logging.rs  main.rs  watcher.rs
src/gui/: gui.rs  mod.rs
src/service/: mod.rs  windows.rs
