[package]
name = "rakaly"
version = "0.1.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2018"

[features]
gui = ["druid"]

[dependencies]
toml = "0.5"
pico-args = "0.3"
fern = "0.6"
notify = "4"
ureq = { version = "1.3", default-features = false, features = ["native-tls"] }
log = { version = "0.4", features = ["serde"] }
text_io = "0.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
flate2 = "1"
druid = { version = "0.6", optional = true }
directories = "3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
